--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "homepage": "https://github.com/johndoh/roundcube-stretchedelastic/",
   "license": "CC-BY-SA-3.0",
   "type": "roundcube-skin",
-  "version": "0.1",
+  "version": "0.2-git",
   "authors": [
     {
       "name": "Philip Weir",
